--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -11,10 +11,10 @@ const {description} = Astro.props
 const {page_path} = Astro.props
 const {keywords} = Astro.props
 
-const siteName = "BOZZHIK"
+const siteName = 'BOZZHIK'
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -24,7 +24,7 @@ const siteName = "BOZZHIK"
     <meta name="title" content={siteName + title} />
     <meta name="description" content={description} />
     <meta name="keywords" content=`bozzhik, bozhik, божик, веб-разработчик, веб-дизайнер, портфолио, веб-сайты, фронтенд, фрилансер, заказ сайтов, веб-разработка на заказ, создание сайта, ${keywords}` />
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow" />
     <meta name="author" content={siteName} />
 
     <meta property="og:type" content="website" />
@@ -39,7 +39,7 @@ const siteName = "BOZZHIK"
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content="/seo.png" />
   </head>
-  <body class="font-grotesque text-black">
+  <body class="text-white font-grotesque">
     <slot />
   </body>
 </html>
