--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from '../Layout.astro'
+import Header from '../components/Header.astro'
 ---
 
-<Layout page_path="" title="" description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне." keywords='веб-программирование, бэкенд, UI/UX, интерактивные сайты, 3д сайты'>
-  <main>
-    <h1 class="text-center">Я БОЗХИК</h1>
-  </main>
+<Layout page_path="" title="" description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне." keywords="веб-программирование, бэкенд, UI/UX, интерактивные сайты, 3д сайты">
+  <Header />
 </Layout>
