styling `Header.astro` child components

--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -39,7 +39,7 @@ const siteName = 'BOZZHIK'
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content="/seo.png" />
   </head>
-  <body class="text-white font-grotesque">
+  <body class="text-white font-grotesque bg-custom-background">
     <slot />
   </body>
 </html>
