--- a/src/components/Header/Avatar.astro
+++ b/src/components/Header/Avatar.astro
@@ -1,5 +1,5 @@
-<div class="avatar">
-  <div class="rounded-full w-14 h-14 ring ring-offset-base-100 ring-offset-2 ring-purple-300">
-    <img src="https://plus.unsplash.com/premium_photo-1690487577999-6424ed2ffa67?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1965&q=80" />
+<div class="relative inline-flex justify-self-start">
+  <div class="block overflow-hidden transition border-[4px] duration-300 border-transparent rounded-full aspect-square w-16 h-16 hover:ring-[2px] hover:ring-white">
+    <img class="object-cover w-full h-full" src="https://sun9-12.userapi.com/impg/Yf4eFcAe9S9Fiw_Njb_6SzzML3Dsz74e2gSBcQ/BBbZTmHRV90.jpg?size=2560x1097&quality=95&sign=9877d1e998cc239c7bd87d6837bc7e6e&type=album" />
   </div>
 </div>
