--- a/src/components/Header/Menu.astro
+++ b/src/components/Header/Menu.astro
@@ -1,7 +1,9 @@
-<details class="mb-32 dropdown">
-  <summary class="m-1 btn">open or close</summary>
-  <ul class="p-2 shadow menu dropdown-content z-[1] bg-base-100 rounded-box w-52">
-    <li><a>Item 1</a></li>
-    <li><a>Item 2</a></li>
-  </ul>
-</details>
+<div class="justify-self-end">
+  <div class="flex justify-center items-center w-[60px] h-[60px] bg-custom-dark-1 rounded-full">
+    <button class="z-10 w-1/2 text-xl text-white bg-transparent hover:opacity-80" data-action="left">
+      <div class="grid place-items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="none"><path stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352"></path></svg>
+      </div>
+    </button>
+  </div>
+</div>
