--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,5 @@ import Header from '../components/Header.astro'
 ---
 
 <Layout page_path="" title="" description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне." keywords="веб-программирование, бэкенд, UI/UX, интерактивные сайты, 3д сайты">
-  <Header />
+  <Header width="w-[55%] sm:w-[40%]" />
 </Layout>
