separate icon into `MenuIcon.astro`

--- a/src/components/Header/Menu.astro
+++ b/src/components/Header/Menu.astro
@@ -1,8 +1,12 @@
+---
+import MenuIcon from './MenuIcon.astro'
+---
+
 <div class="justify-self-end">
   <div class="flex justify-center items-center w-[60px] h-[60px] bg-custom-dark-1 rounded-full">
     <button class="z-10 w-1/2 text-xl text-white bg-transparent hover:opacity-80" data-action="left">
       <div class="grid place-items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="none"><path stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352"></path></svg>
+        <MenuIcon color="white" />
       </div>
     </button>
   </div>
