--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -19,6 +19,7 @@ const siteName = 'BOZZHIK'
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link href="https://fonts.googleapis.com/css?family=DM+Mono:500" rel="stylesheet" />
     <meta name="generator" content={Astro.generator} />
     <title>{siteName + title}</title>
     <meta name="title" content={siteName + title} />
@@ -43,3 +44,32 @@ const siteName = 'BOZZHIK'
     <slot />
   </body>
 </html>
+
+<style is:global>
+  @font-face {
+    font-family: 'Sequel Sans';
+    src:
+      url('../fonts/Sequel-Sans-Roman-Head.woff2') format('woff2'),
+      url('../fonts/Sequel-Sans-Roman-Head.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Sequel Sans';
+    src:
+      url('../fonts/Sequel-Sans-Medium-Head.woff2') format('woff2'),
+      url('../fonts/Sequel-Sans-Medium-Head.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Sequel Sans';
+    src:
+      url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff2') format('woff2'),
+      url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+  }
+</style>
