--- a/src/components/Header/MenuIcon.astro
+++ b/src/components/Header/MenuIcon.astro
@@ -1,9 +1,1 @@
----
-interface Props {
-  color: string
-}
-
-const {color} = Astro.props
----
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="none"><path stroke={color} stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="none"><path stroke="#6a6a6a" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352"></path></svg>
