init `Hero.astro` + child components && stylize it

--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -46,6 +46,16 @@ const siteName = 'BOZZHIK'
 </html>
 
 <style is:global>
+  .GRADIENT_TEXT {
+    background: linear-gradient(100deg, #838386 5%, #fff 100%);
+    background-size: 100% 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+</style>
+
+<style is:global>
   @font-face {
     font-family: 'Sequel Sans';
     src:
