--- a/src/components/Header/Switch.astro
+++ b/src/components/Header/Switch.astro
@@ -1,7 +1,7 @@
 <div class="justify-self-center">
   <div class="relative flex w-[184px] h-[60px] bg-custom-dark-2 rounded-switch">
-    <button class="z-10 w-1/2 text-lg duration-300 bg-transparent hover:text-white hover:font-medium" data-action="left">Work</button>
-    <button class="z-10 w-1/2 -ml-1 text-lg duration-300 bg-transparent hover:text-white hover:font-medium" data-action="right">Play</button>
+    <button class="z-10 w-1/2 text-lg duration-300 bg-transparent hover:text-white" data-action="left">Work</button>
+    <button class="z-10 w-1/2 -ml-1 text-lg duration-300 bg-transparent hover:text-white" data-action="right">Play</button>
     <div id="area" class="absolute top-[6px] left-[6px] w-[45%] h-[80%] transition-transform duration-300 ease-in-out rounded-switch bg-custom-dark-1"></div>
   </div>
 </div>
@@ -19,7 +19,6 @@
     buttons.forEach((button, index) => {
       const isButtonOne = index === 0
       button.classList.add(isHomePage === isButtonOne ? 'text-white' : 'text-gray-700')
-      button.classList.add(isHomePage === isButtonOne ? 'font-medium' : 'font-normal')
     })
   }
 
@@ -30,15 +29,15 @@
     buttons.forEach((button) => {
       button.addEventListener('click', () => {
         buttons.forEach((b) => {
-          b.classList.remove('text-white', 'font-medium')
-          b.classList.add('text-gray-700', 'font-normal')
+          b.classList.remove('text-white')
+          b.classList.add('text-gray-700')
         })
 
         const action = button.getAttribute('data-action')
         area!.style.transform = action === 'left' ? 'translateX(0%)' : 'translateX(105%)'
 
-        button.classList.remove('text-gray-700', 'font-normal')
-        button.classList.add('text-white', 'font-medium')
+        button.classList.remove('text-gray-700')
+        button.classList.add('text-white')
       })
     })
   }
