--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,4 @@
 ---
-import Caption from './Hero/Caption.astro'
 import TextMono from './Hero/TextMono.astro'
 import Title from './Hero/Title.astro'
 
@@ -10,8 +9,7 @@ interface Props {
 const {width} = Astro.props
 ---
 
-<div class=`mt-36 mx-auto text-center ${width}`>
-  <Caption />
+<div class=`mt-[22.5vh] mx-auto text-center ${width}`>
   <Title />
-  <TextMono content="Im currently at Snap, where I design experiences around finding and using AR Lenses on Snapchat" classes="GRADIENT_TEXT w-2/3 mx-auto leading-[110%] mt-10" />
+  <TextMono content="I'm Maxim Bozhik, HSE design and programming student" classes="w-2/5 mx-auto leading-[110%] mt-7" />
 </div>
