--- a/src/components/Hero/TextMono.astro
+++ b/src/components/Hero/TextMono.astro
@@ -8,4 +8,4 @@ const {content} = Astro.props
 const {classes} = Astro.props
 ---
 
-<div class=`text-[23px] uppercase font-medium font-monospaced text-custom-light-2 ${classes}`>{content}</div>
+<div class=`text-[23px] uppercase font-normal font-monospaced ${classes}`>{content}</div>
