--- a/src/components/Hero/Title.astro
+++ b/src/components/Hero/Title.astro
@@ -1,4 +1,4 @@
-<h1 class="text-[162px] GRADIENT_TEXT leading-[87.5%] mt-10 font-semibold">
+<h1 class="text-[162px] leading-[87.5%] font-semibold">
   FRONTEND <br />
    DEVELOPER
 </h1>
