--- a/src/components/BackgroundScene.astro
+++ b/src/components/BackgroundScene.astro
@@ -2,4 +2,5 @@
   <spline-viewer url="https://prod.spline.design/666OKdANpYnSGO25/scene.splinecode"></spline-viewer>
 </div>
 
-<script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.291/build/spline-viewer.js"></script>
+<script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.291/build/spline-viewer.js" async></script>
+
