adaptive `Hero.astro` + child components

--- a/src/components/Hero/Title.astro
+++ b/src/components/Hero/Title.astro
@@ -1,4 +1,4 @@
-<h1 class="text-[162px] leading-[87.5%] font-semibold">
+<h1 class="text-[162px] xl:text-[125px] lg:text-[145px] leading-[87.5%] font-semibold">
   FRONTEND <br />
    DEVELOPER
 </h1>
