--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ interface Props {
 const {width} = Astro.props
 ---
 
-<div class=`mt-[22.5vh] mx-auto text-center ${width}`>
+<div class=`h-screen w-screen absolute inset-0 flex flex-col justify-center mx-auto text-center ${width}`>
   <Title />
-  <TextMono content="I'm Maxim Bozhik, HSE design and programming student" classes="w-2/5 mx-auto leading-[110%] mt-7" />
+  <TextMono content="I'm Maxim Bozhik, HSE design and programming student" classes="lg:w-4/5 lg:mt-7 mx-auto leading-[110%] xl:mt-4 mt-7" />
 </div>
