fix adaptive `Hero.astro` + child components
I spent 4 hours of my life to understand that I needed a `meta name="viewport"`

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,5 +11,5 @@ const {width} = Astro.props
 
 <div class=`h-screen w-screen absolute inset-0 flex flex-col justify-center mx-auto text-center ${width}`>
   <Title />
-  <TextMono content="I'm Maxim Bozhik, HSE design and programming student" classes="lg:w-4/5 lg:mt-7 mx-auto leading-[110%] xl:mt-4 mt-7" />
+  <TextMono content="I'm Maxim Bozhik, HSE design and programming student" classes="lg:w-4/5 mx-auto leading-[110%] xl:mt-4 mt-7" />
 </div>
