--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -19,6 +19,7 @@ const siteName = 'BOZZHIK'
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=DM+Mono:normal" rel="stylesheet" />
     <meta name="generator" content={Astro.generator} />
     <title>{siteName + title}</title>
@@ -44,7 +45,6 @@ const siteName = 'BOZZHIK'
     <slot />
   </body>
 </html>
-
 
 <style is:global>
   @font-face {
