--- a/src/components/Hero/TextMono.astro
+++ b/src/components/Hero/TextMono.astro
@@ -8,4 +8,4 @@ const {content} = Astro.props
 const {classes} = Astro.props
 ---
 
-<div class=`text-2xl xl:text-xl lg:text-4xl uppercase font-normal font-monospaced ${classes}`>{content}</div>
+<div class=`text-2xl xl:text-xl lg:text-sm lg:leading-[1.15] uppercase font-normal font-monospaced ${classes}`>{content}</div>
