fix adaptive `Header.astro` + child components

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ interface Props {
 const {width} = Astro.props
 ---
 
-<header class=`grid items-center grid-cols-3 mx-auto mt-9 ${width}`>
+<header class=`grid items-center grid-cols-3 mx-auto lg:mt-2 mt-9 ${width}`>
   <Avatar />
   <Tabs />
   <Menu />
