--- a/src/components/Header/Menu.astro
+++ b/src/components/Header/Menu.astro
@@ -3,7 +3,7 @@ import MenuIcon from './MenuIcon.astro'
 ---
 
 <div class="justify-self-end">
-  <div class="flex justify-center items-center w-[60px] h-[60px] bg-custom-dark-1 rounded-full">
+  <div class="flex items-center justify-center rounded-full s-16 sm:s-[52px] bg-custom-dark-1">
     <button class="z-10 w-1/2 text-xl text-white bg-transparent">
       <div class="grid place-items-center">
         <MenuIcon />
