--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ interface Props {
 const {width} = Astro.props
 ---
 
-<div class=`h-screen w-screen absolute inset-0 flex flex-col justify-center mx-auto text-center ${width}`>
+<div class=`!h-[100svh] h-[100vh] w-screen absolute inset-0 flex flex-col justify-center mx-auto text-center ${width}`>
   <Title />
   <TextMono content="I'm Maxim Bozhik, HSE design and programming student" classes="lg:w-4/5 mx-auto leading-[110%] xl:mt-4 mt-7" />
 </div>
