switch `Menu.astro` → `Resume.astro` [icon also]

--- a/src/components/Header/Resume.astro
+++ b/src/components/Header/Resume.astro
@@ -1,12 +1,12 @@
 ---
-import MenuIcon from './MenuIcon.astro'
+import ResumeIcon from './ResumeIcon.astro'
 ---
 
 <div class="justify-self-end">
   <div class="flex items-center justify-center rounded-full s-16 sm:s-[52px] bg-custom-dark-1">
     <button class="z-10 w-1/2 text-xl text-white bg-transparent">
       <div class="grid place-items-center">
-        <MenuIcon />
+        <ResumeIcon />
       </div>
     </button>
   </div>
