--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import Avatar from './Header/Avatar.astro'
-import Menu from './Header/Menu.astro'
+import Resume from './Header/Resume.astro'
 import Tabs from './Header/Switch.astro'
 
 interface Props {
@@ -13,5 +13,5 @@ const {width} = Astro.props
 <header class=`grid items-center grid-cols-3 mx-auto lg:mt-2 mt-9 ${width}`>
   <Avatar />
   <Tabs />
-  <Menu />
+  <Resume />
 </header>
