optimize `Switch.astro` position && upload `avatar` img

--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -41,7 +41,7 @@ const siteName = 'BOZZHIK'
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content="/seo.png" />
   </head>
-  <body class="text-white font-grotesque bg-custom-background">
+  <body class="text-white font-grotesque bg-black">
     <slot />
   </body>
 </html>
