--- a/src/components/Header/Avatar.astro
+++ b/src/components/Header/Avatar.astro
@@ -1,6 +1,7 @@
-<div class="relative inline-flex justify-self-start">
+<div class="relative z-10 inline-flex justify-self-start">
   <div class="block overflow-hidden transition border-[4px] duration-300 border-transparent rounded-full aspect-square s-14 sm:s-[54px] hover:ring-[2px] hover:ring-custom-light-2">
-    <div class="w-full h-full bg-custom-dark-1"></div>
-    <!-- <img class="object-cover w-full h-full" src="https://sun9-12.userapi.com/impg/Yf4eFcAe9S9Fiw_Njb_6SzzML3Dsz74e2gSBcQ/BBbZTmHRV90.jpg?size=2560x1097&quality=95&sign=9877d1e998cc239c7bd87d6837bc7e6e&type=album" /> -->
+    <div class="s-full group flex overflow-hidden justify-center bg-custom-dark-1">
+      <img class="group-hover:animate-pulse object-cover s-8 mt-1" src="../../../maks.png" />
+    </div>
   </div>
 </div>
