--- a/src/components/Hero/Title.astro
+++ b/src/components/Hero/Title.astro
@@ -1,4 +1,3 @@
 <h1 class="text-[162px] xl:text-[125px] lg:text-[16vw] leading-[87.5%] font-semibold">
-  FRONTEND <br />
-   DEVELOPER
+  FRONTEND <br /> DEVELOPER
 </h1>
