--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -8,5 +8,5 @@ import Hero from '../components/Hero.astro'
 <Layout page_path="" title="" description="Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне." keywords="веб-программирование, бэкенд, UI/UX, интерактивные сайты, 3д сайты">
   <BackgroundScene />
   <Header width="w-[55%] xl:w-[65%] lg:w-[95%]" />
-  <!-- <Hero width="" /> -->
+  <Hero width="" textmono_content="I'm Maxim Bozhik, crafting web applications and websites" />
 </Layout>
