--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import {ViewTransitions} from 'astro:transitions'
 interface Props {
   title: string
   description: string
@@ -40,28 +41,28 @@ const siteName = 'BOZZHIK'
     <meta property="og:title" content={siteName + title} />
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content="/seo.png" />
+    <ViewTransitions />
   </head>
   <body class="text-white font-grotesque bg-black">
     <slot />
   </body>
+  <style is:global>
+    @font-face {
+      font-family: 'Sequel Sans';
+      src:
+        url('../fonts/Sequel-Sans-Roman-Head.woff2') format('woff2'),
+        url('../fonts/Sequel-Sans-Roman-Head.woff') format('woff');
+      font-weight: 400;
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: 'Sequel Sans';
+      src:
+        url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff2') format('woff2'),
+        url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff') format('woff');
+      font-weight: 600;
+      font-style: normal;
+    }
+  </style>
 </html>
-
-<style is:global>
-  @font-face {
-    font-family: 'Sequel Sans';
-    src:
-      url('../fonts/Sequel-Sans-Roman-Head.woff2') format('woff2'),
-      url('../fonts/Sequel-Sans-Roman-Head.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  @font-face {
-    font-family: 'Sequel Sans';
-    src:
-      url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff2') format('woff2'),
-      url('../fonts/Sequel-Sans-Semi-Bold-Disp.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-  }
-</style>
