--- a/src/components/BackgroundScene.astro
+++ b/src/components/BackgroundScene.astro
@@ -1,6 +1,6 @@
 <div class="fixed inset-0 w-screen h-screen -z-50">
   <spline-viewer url="https://prod.spline.design/666OKdANpYnSGO25/scene.splinecode"></spline-viewer>
+  <!-- <spline-viewer url="https://prod.spline.design/pSZmbCPvAvB34Eat/scene.splinecode"></spline-viewer> -->
 </div>
 
-<script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.291/build/spline-viewer.js" async></script>
-
+<script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.442/build/spline-viewer.js"></script>
