--- a/src/components/Header/Switch.astro
+++ b/src/components/Header/Switch.astro
@@ -2,14 +2,14 @@
 const firstButton = 'Projects'
 const secondButton = 'Works'
 
-const buttonStyles = 'z-10 w-1/2 text-base duration-300 bg-transparent lg:text-base hover:text-white text-gray-700'
+const buttonStyles = 'block grid place-items-center z-10 w-1/2 text-base duration-200 bg-transparent lg:text-base hover:text-white text-gray-700'
 ---
 
-<div class="justify-self-center">
+<div class="justify-self-center" transition:persist>
   <div class="relative flex w-[205px] px-[6px] lg:w-[180px] lg:h-[52px] h-[60px] bg-custom-dark-2 rounded-switch">
-    <button class={buttonStyles} data-action="left">{firstButton}</button>
-    <button class={buttonStyles} data-action="right">{secondButton}</button>
-    <div id="area" class="absolute lg:top-[5.25px] top-[6px] w-[48%] h-[80%] transition-transform duration-300 ease-in-out rounded-switch bg-custom-dark-1"></div>
+    <a id="PROJECTS_LINK" href="/" class={buttonStyles} data-action="left">{firstButton}</a>
+    <a id="WORKS_LINK" href="/works.html" class={buttonStyles} data-action="right">{secondButton}</a>
+    <div id="area" class="absolute lg:top-[5.25px] top-[6px] w-[48%] h-[80%] transition-transform duration-200 ease-in-out rounded-switch bg-custom-dark-1"></div>
   </div>
 </div>
 
@@ -20,80 +20,63 @@ const buttonStyles = 'z-10 w-1/2 text-base duration-300 bg-transparent lg:text-b
   }
 
   function initialize() {
-    const buttons = document.querySelectorAll('button[data-action]')
+    const links = document.querySelectorAll('a[data-action]')
     const isProjectsPage = window.location.pathname === '/'
     const isWorksPage = window.location.pathname === '/works.html'
     const area = document.getElementById('area')
 
-    buttons.forEach((button, index) => {
-      const isButtonOne = index === 0
-      const isButtonTwo = index === 1
+    links.forEach((link, index) => {
+      const isLinkOne = index === 0
+      const isLinkTwo = index === 1
 
       if (isProjectsPage) {
-        button.classList.add(isButtonOne ? 'text-white' : 'text-gray-700')
+        link.classList.add(isLinkOne ? 'text-white' : 'text-gray-700')
       } else if (isWorksPage) {
-        button.classList.add(isButtonTwo ? 'text-white' : 'text-gray-700')
+        link.classList.add(isLinkTwo ? 'text-white' : 'text-gray-700')
       }
     })
 
     if (area) {
       if (isWorksPage) {
-        area.classList.remove('left-[5px]')
-        area.classList.add('right-[6.5px]')
+        area.style.left = 'auto'
+        area.style.right = '6.5px'
       }
     }
   }
 
-  initialize()
-
   function switchOperation() {
-    const buttons = document.querySelectorAll('button[data-action]')
+    const links = document.querySelectorAll('a[data-action]')
     const area = document.getElementById('area')
 
-    buttons.forEach((button) => {
-      button.addEventListener('click', () => {
-        buttons.forEach((b) => {
-          b.classList.remove('text-white')
-          b.classList.add('text-gray-700')
+    links.forEach((link) => {
+      link.addEventListener('click', () => {
+        links.forEach((l) => {
+          l.classList.remove('text-white')
+          l.classList.add('text-gray-700')
         })
 
-        function translateX(leftTranslate: string, rightTranslate: string): void {
+        function translateX(leftTranslate: string, rightTranslate: string) {
           if (area) {
-            const action = button.getAttribute('data-action')
+            const action = link.getAttribute('data-action')
             const translateValue = action === 'left' ? leftTranslate : rightTranslate
             area.style.transform = `translateX(${translateValue}%)`
           }
         }
 
-        if (window.innerWidth < 768) {
-          if (window.location.pathname.startsWith('/works')) {
-            translateX('-94', '0')
-          } else {
-            translateX('0', '94')
-          }
-        } else {
-          if (window.location.pathname.startsWith('/works')) {
-            translateX('-93.7', '0')
-          } else {
-            translateX('0', '94.5')
-          }
-        }
+        translateX('-94', '0')
 
-        button.classList.remove('text-gray-700')
-        button.classList.add('text-white')
-
-        setTimeout(() => {
-          if (button.getAttribute('data-action') === 'left') {
-            window.location.href = '/'
-          } else {
-            window.location.href = '/works.html'
-          }
-        }, 300)
+        link.classList.remove('text-gray-700')
+        link.classList.add('text-white')
       })
     })
   }
 
   document.addEventListener('DOMContentLoaded', () => {
+    initialize()
+    switchOperation()
+  })
+
+  document.addEventListener('astro:beforeload', () => {
     initialize()
     switchOperation()
   })
