change link path to `works` folder

--- a/src/components/Header/Switch.astro
+++ b/src/components/Header/Switch.astro
@@ -8,7 +8,7 @@ const buttonStyles = 'block grid place-items-center z-10 w-1/2 text-base duratio
 <div class="justify-self-center" transition:persist>
   <div class="relative flex w-[205px] px-[6px] lg:w-[180px] lg:h-[52px] h-[60px] bg-custom-dark-2 rounded-switch">
     <a id="PROJECTS_LINK" href="/" class={buttonStyles} data-action="left">{firstButton}</a>
-    <a id="WORKS_LINK" href="/works.html" class={buttonStyles} data-action="right">{secondButton}</a>
+    <a id="WORKS_LINK" href="/works/" class={buttonStyles} data-action="right">{secondButton}</a>
     <div id="area" class="absolute lg:top-[5.25px] top-[6px] w-[48%] h-[80%] transition-transform duration-200 ease-in-out rounded-switch bg-custom-dark-1"></div>
   </div>
 </div>
