--- a/src/components/BackgroundScene.astro
+++ b/src/components/BackgroundScene.astro
@@ -1,6 +1,19 @@
-<div class="fixed inset-0 w-screen h-screen -z-50">
-  <spline-viewer url="https://prod.spline.design/666OKdANpYnSGO25/scene.splinecode"></spline-viewer>
-  <!-- <spline-viewer url="https://prod.spline.design/pSZmbCPvAvB34Eat/scene.splinecode"></spline-viewer> -->
+<!-- <div class="fixed inset-0 w-screen h-screen -z-50">
+  <canvas id="canvas3d"></canvas>
 </div>
 
-<script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.442/build/spline-viewer.js"></script>
+<script>
+  import {Application} from '@splinetool/runtime'
+
+  document.addEventListener('DOMContentLoaded', () => {
+    const canvas = document.getElementById('canvas3d') as HTMLCanvasElement | null
+    setTimeout(() => {
+      if (canvas) {
+        const app = new Application(canvas)
+        app.load('https://prod.spline.design/666OKdANpYnSGO25/scene.splinecode')
+      } else {
+        console.error("Element with ID 'canvas3d' not found.")
+      }
+    }, 2000)
+  })
+</script> -->
