--- a/src/components/Hero/Caption.astro
+++ b/src/components/Hero/Caption.astro
@@ -3,8 +3,8 @@ import TextMono from './TextMono.astro'
 ---
 
 <div class="flex items-center justify-center gap-3">
-  <div class="rounded-full w-7 h-7 bg-custom-light-1">
-    <div class="s-full bg-white border-[5px] rounded-full border-custom-light-1 animate-pulse"></div>
+  <div class="rounded-full w-7 h-7 bg-[#2A2A2A]">
+    <div class="s-full bg-white border-[5px] rounded-full border-[#2A2A2A] animate-pulse"></div>
   </div>
   <TextMono content="AVAILABLE FOR FREELANCE" classes="" />
 </div>
