--- a/src/components/Header/Avatar.astro
+++ b/src/components/Header/Avatar.astro
@@ -1,7 +1,7 @@
 <div class="relative z-10 inline-flex justify-self-start">
-  <div class="block overflow-hidden transition border-[4px] duration-200 border-transparent rounded-full aspect-square s-14 sm:s-[54px] hover:ring-[2px] hover:ring-custom-light-2">
+  <div class="block overflow-hidden transition border-[4px] duration-200 border-transparent rounded-full aspect-square s-[70px] sm:s-[60px] hover:ring-[2px] hover:ring-custom-light-2">
     <div class="s-full group flex overflow-hidden justify-center bg-custom-dark-1">
-      <img class="group-hover:animate-pulse object-cover s-8 mt-1" src="../../../maks.png" />
+      <img class="group-hover:animate-pulse object-cover s-9 lg:s-8 mt-2 lg:mt-[6px]" src="../../../maks.png" />
     </div>
   </div>
 </div>
