--- a/src/components/Header/Switch.astro
+++ b/src/components/Header/Switch.astro
@@ -2,14 +2,14 @@
 const firstButton = 'Projects'
 const secondButton = 'Works'
 
-const buttonStyles = 'block grid place-items-center z-10 w-1/2 text-base duration-200 bg-transparent lg:text-base hover:text-white text-gray-700'
+const buttonStyles = 'block grid place-items-center z-10 w-1/2 text-base duration-200 bg-transparent lg:text-sm hover:text-white text-gray-700'
 ---
 
 <div class="justify-self-center" transition:persist>
-  <div class="relative flex w-[205px] px-[6px] lg:w-[180px] lg:h-[52px] h-[60px] bg-custom-dark-2 rounded-switch">
+  <div class="relative flex w-[205px] px-[6px] lg:w-[155px] lg:h-[50px] h-[60px] bg-custom-dark-1 rounded-switch">
     <a id="PROJECTS_LINK" href="/" class={buttonStyles} data-action="left">{firstButton}</a>
     <a id="WORKS_LINK" href="/works/" class={buttonStyles} data-action="right">{secondButton}</a>
-    <div id="area" class="absolute lg:top-[5.25px] top-[6px] w-[48%] h-[80%] ease-in-out rounded-switch bg-custom-dark-1"></div>
+    <div id="area" class="absolute lg:top-[5.25px] top-[6px] w-[48%] h-[80%] ease-in-out rounded-switch bg-custom-dark-2"></div>
   </div>
 </div>
 
