--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '../Layout.astro'
-import Header from '../components/Header.astro'
+import Layout from '../layouts/Layout.astro'
+import Header from '../layouts/Header.astro'
 import Hero from '../components/Hero.astro'
 import BackgroundStars from '../components/BackgroundStars.astro'
 ---
